# TwitchXX

./: meson.build  meson_options.txt
TwitchXX/: meson.build
TwitchXX-Tests/: CMakeLists.txt  meson.build
subprojects/: cpprest.wrap
